--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body style="background-color:red;">
-<p >Welcome to AcuteAnalytica </p>
+<h1 >Welcome to AcuteAnalytica </h1>
+<h2>contact us: insights@iconanalytics.com</h2>
 </body>
 </html>
