--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 </head>
-<body style="background-color:red;">
+<body style="background-color:blue;">
 <h1 >Welcome to AcuteAnalytica </h1>
 <h2>contact us: insights@iconanalytics.com</h2>
 </body>
